# sysop

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SETUP_INSTRUCTIONS.md  install.json  main.py  package-lock.json  package.json  pyproject.toml  setup.ps1  setup.py  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: lint.yml
examples/: basic_usage.ipynb  example_usage.py
labextension/: package.json
labextension/static/: 364.0fe04a6c7a2af1d8653e.js  509.a133dfc4e0231dcebc8d.js  665.5af7145313ad0f18661b.js  997.aafc3f039335fd5d6d79.js  remoteEntry.2b51e53dc56467f74991.js  style.js  third-party-licenses.json
src/maxbot/: __init__.py  chatbot_agent.py  jupyter_extension.py
src/sysop/: __init__.py  chatbot_agent.py  cli.py  jupyter_extension.py  lab_bridge.py
style/: index.css
tests/: test_copilot_integration.py  test_lab_bridge.py
ui-src/: index.ts
