[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysop"
version = "0.1.0"
description = "sysop: GitHub Copilot SDK-powered Jupyter notebook assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Christopher Landry", email = "sysop@navigatorbbs.net"}
]
keywords = ["jupyter", "copilot", "ai", "chatbot", "notebook", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "github-copilot-sdk>=0.1.30",
    "ipython>=8.0.0",
    "jupyterlab>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/NavigatorBBS/sysop"
Repository = "https://github.com/NavigatorBBS/sysop"
Issues = "https://github.com/NavigatorBBS/sysop/issues"

[tool.setuptools]
packages = ["sysop"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[project.scripts]
sysop = "sysop.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
